-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.0
-
None
-
-
27283b02c (dev)
As of https://codereview.qt-project.org/c/qt/qtwayland/+/583059 (6.9.0), it is impossible to implement ext-session-lock-v1 with Qt.
Attaching a null buffer to a wl_surface with a session lock role is a protocol error. Prior to the linked change, a buffer could be manually attached to the window to satisfy this requirement before Qt commits the surface at the end of QWaylandWindow::initWindow. Following the change, Qt attaches a null surface and immediately commits it, making it impossible to avoid a protocol error.